added some copy of cards

--- a/navbar.html
+++ b/navbar.html
@@ -85,6 +85,46 @@
                 <h2>Card Title</h2>
                 <p>Card Description</p>
               </div>
+              <div class="card">
+                <img src="Chopped.jpg" alt="Card Image">
+                <h2>Card Title</h2>
+                <p>Choped Fruits</p>
+              </div>
+              <div class="card">
+                <img src="Fruit.jpg" alt="Card Image">
+                <h2>Card Title</h2>
+                <p>Card Description</p>
+              </div>
+              <div class="card">
+                <img src="Grapes.jpg" alt="Card Image">
+                <h2>Card Title</h2>
+                <p>Card Description</p>
+              </div>
+              <div class="card">
+                <img src="Flower.jpg" alt="Card Image">
+                <h2>Card Title</h2>
+                <p>Card Description</p>
+              </div>
+              <div class="card">
+                <img src="Fruit.jpg" alt="Card Image">
+                <h2>Card Title</h2>
+                <p>Card Description</p>
+              </div>
+              <div class="card">
+                <img src="Flower.jpg" alt="Card Image">
+                <h2>Card Title</h2>
+                <p>Card Description</p>
+              </div>
+              <div class="card">
+                <img src="Grapes.jpg" alt="Card Image">
+                <h2>Card Title</h2>
+                <p>Card Description</p>
+              </div>
+              <div class="card">
+                <img src="Flower.jpg" alt="Card Image">
+                <h2>Card Title</h2>
+                <p>Card Description</p>
+              </div>
               
         </div>
         <footer>
