--- a/signup.html
+++ b/signup.html
@@ -10,19 +10,19 @@
     <div class="container">
         <div class="form-box">
             <h1 id="title">SIGN UP</h1>
-            <form >
+            <form  action="connect.php" method="post">
                 <div class="input-group">
                     <div class="input-field" id="nameField">
                        <i class="fa-solid fa-user"></i>
-                       <input type="text" placeholder="Name">
+                       <input type="text" placeholder="Name" name="name">
                     </div>
                     <div class="input-field">
                         <i class="fa-solid fa-envelop"></i>
-                        <input type="email" placeholder="Email">
+                        <input type="email" placeholder="Email" name="email">
                      </div>
                      <div class="input-field">
                         <i class="fa-solid fa-lock"></i>
-                        <input type="password" placeholder="Password">
+                        <input type="password" placeholder="Password" name="password">
                      </div>
                      <p>Forgot Password? <a href="#">Change password</a></p>
                 </div>
